resolve some layout issues on mobile versions

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,8 @@ body {
   @media (max-width: 56.25em) {
     .section-about {
       padding: 10rem 0;
-      height: 100vh; } }
+      height: auto;
+      min-height: 100vh; } }
 
 .section-features {
   height: 95vh;
@@ -198,7 +199,8 @@ body {
   width: 100%; }
   @media (max-width: 56.25em) {
     .section-features {
-      height: 100vh; } }
+      height: auto;
+      min-height: 100vh; } }
 
 .section-demonstration {
   height: 95vh;
@@ -207,18 +209,20 @@ body {
   position: relative; }
   @media (max-width: 75em) {
     .section-demonstration {
-      height: 100vh;
+      height: auto;
       padding: 10rem 0; } }
 
 .section-downloads {
-  height: 95vh;
+  min-height: 95vh;
+  height: auto;
   background-color: #d4e1e6;
   padding: 20rem 0;
   margin-bottom: 2.5vh; }
   @media (max-width: 56.25em) {
     .section-downloads {
       padding: 10rem 0;
-      height: 100vh; } }
+      height: auto;
+      min-height: 100vh; } }
   @media (max-width: 37.5em) {
     .section-downloads {
       padding: 5rem 0; } }
@@ -231,7 +235,8 @@ body {
   background-image: linear-gradient(to right bottom, #00b4f6, #12e4a6); }
   @media (max-width: 56.25em) {
     .section-email {
-      height: 100vh; } }
+      height: auto;
+      min-height: 100vh; } }
 
 .email {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 40%, rgba(255, 255, 255, 0) 50%), url(../img/circle3.jpg);
@@ -249,16 +254,18 @@ body {
         width: 70%; } }
 
 .section-social {
+  min-height: 95vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 95vh;
   padding: 15rem 0;
   margin-bottom: 2.5vh;
   background-image: linear-gradient(to right bottom, #2e3233, #464c4e); }
   @media (max-width: 56.25em) {
     .section-social {
-      height: 100vh; } }
+      height: auto;
+      min-height: 100vh;
+      padding: 3rem 0; } }
 
 .btn, .btn:link, .btn:visited {
   font-family: Roboto, sans-serif;
@@ -651,14 +658,12 @@ body {
   @media (max-width: 37.5em) {
     .social {
       width: 100%; }
-      .social__icon {
-        transform: scale(0.8); }
-        .social__icon--discord {
-          transform: scale(0.4); }
-        .social__icon--email {
-          transform: scale(1.3); }
-        .social__icon--github {
-          transform: scale(0.3); } }
+      .social__icon--discord {
+        transform: scale(0.4); }
+      .social__icon--email {
+        transform: scale(1.3); }
+      .social__icon--github {
+        transform: scale(0.3); } }
 
 a svg:hover #github,
 a svg:hover .st0 {
