--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -48,7 +48,7 @@
 		width: 100%;
 		
 		&__icon {
-			transform: scale(.8);
+			// transform: scale(.8);
 
 			&--discord {
 				transform: scale(.4);
